<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/todoCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageView"
        android:src="@drawable/baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todoTitle"
        android:textSize="@dimen/todoTitle"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/todoDate"
        app:layout_constraintLeft_toRightOf="@+id/todoCheck"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/todoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todoDate"
        android:textSize="@dimen/todoDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/todoCheck"
        app:layout_constraintTop_toBottomOf="@+id/todoTitle" />

    <ImageView
        android:id="@+id/todoEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageView"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/todoDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/todoDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageView"
        android:src="@drawable/baseline_delete_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
