<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="createTodoViewModel"
            type="com.websarva.wings.android.todoappsample.CreateTodoViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskName"
                        android:textColor="@color/dodger_blue" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/taskName"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/hint"
                        android:inputType="text"
                        android:text="@{createTodoViewModel.taskName}" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/taskExpired"
                        android:textColor="@color/dodger_blue" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <DatePicker
                        android:id="@+id/taskExpired"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskDescription"
                        android:textColor="@color/dodger_blue" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                    <EditText
                        android:id="@+id/taskDescription"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:hint="@string/hint"
                        android:inputType="text"
                        android:text="@{createTodoViewModel.description}" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/createButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> createTodoViewModel.onCreateButtonClick()}"
                android:text="@string/create"
                app:backgroundTint="@color/dodger_blue" />
        </LinearLayout>

    </LinearLayout>

</layout>
